增加了用户头像动画

--- a/wei/app/src/main/res/values-zh/strings.xml
+++ b/wei/app/src/main/res/values-zh/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">包</string>
+    <!--<string name="app_name">包</string>-->
     <!-- 菜单 消息 -->
     <string name="action_settings">设置</string>
     <string name="action_quit">退出</string>
@@ -30,4 +30,14 @@
     <string name="please_select_a_photo">请选择图片来源</string>upgrade
     <string name="upgrade">升级</string>
     <string name="select_photo">选择图片</string>
+
+    <!--自定义下拉刷新 -->
+    <string name="app_name">PullToRefreshTest</string>
+    <string name="pull_to_refresh">下拉可以刷新</string>
+    <string name="release_to_refresh">释放立即刷新</string>
+    <string name="refreshing">正在刷新…</string>
+    <string name="not_updated_yet">暂未更新过</string>
+    <string name="updated_at">上次更新于%1$s前</string>
+    <string name="updated_just_now">刚刚更新</string>
+    <string name="time_error">时间有问题</string>
 </resources>
